--- a/spring-cloud-starter-huawei/spring-cloud-starter-huawei-service-engine-core/pom.xml
+++ b/spring-cloud-starter-huawei/spring-cloud-starter-huawei-service-engine-core/pom.xml
@@ -24,12 +24,16 @@
     <version>1.7.0-SHAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>spring-cloud-starter-huawei-servicecomb-discovery</artifactId>
+  <artifactId>spring-cloud-starter-huawei-service-engine-core</artifactId>
 
   <dependencies>
     <dependency>
       <groupId>com.huaweicloud</groupId>
-      <artifactId>spring-cloud-huawei-servicecomb-discovery</artifactId>
+      <artifactId>spring-cloud-starter-huawei-discovery</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.huaweicloud</groupId>
+      <artifactId>spring-cloud-starter-huawei-config</artifactId>
     </dependency>
   </dependencies>
 </project>
