--- a/spring-cloud-huawei-dependencies/pom.xml
+++ b/spring-cloud-huawei-dependencies/pom.xml
@@ -45,6 +45,7 @@
     <spring-fox.version>3.0.0</spring-fox.version>
     <swagger-core.version>2.1.9</swagger-core.version>
     <swagger-core-v2.version>1.6.2</swagger-core-v2.version>
+    <resilience4j.version>1.7.0</resilience4j.version>
   </properties>
 
   <dependencyManagement>
@@ -157,6 +158,13 @@
         <groupId>org.java-websocket</groupId>
         <artifactId>Java-WebSocket</artifactId>
         <version>${websocket.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.github.resilience4j</groupId>
+        <artifactId>resilience4j-bom</artifactId>
+        <version>${resilience4j.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
