# add 461 #  make service center client pull interval configurable # update serviceComb version # update spring boot version to 2.3.6RELEASE

--- a/integration-tests/cse-v1/provider/src/main/resources/bootstrap.yml
+++ b/integration-tests/cse-v1/provider/src/main/resources/bootstrap.yml
@@ -25,20 +25,21 @@ spring:
       discovery:
         enabled: true
         watch: false
-        address: https://cse.cn-south-1.myhuaweicloud.com
+        address: http://127.0.0.1:30100
         appName: cse-v1-test-application
         serviceName: ${spring.application.name}
         version: 0.0.1
         healthCheckInterval: 30
+        heartBeatInterval: 1000
       config:
-        serverAddr: https://cse.cn-south-1.myhuaweicloud.com
+        serverAddr: http://127.0.0.1:30113
         fileSource: provider.yaml
         watch:
           delay: 10000
 
-      credentials:
-        enabled: true
-        accessKey: ${CREDENTIALS_AK}
-        secretKey: ${CREDENTIALS_SK}
-        cipher: default
-        project: cn-south-1
+#      credentials:
+#        enabled: true
+#        accessKey: ${CREDENTIALS_AK}
+#        secretKey: ${CREDENTIALS_SK}
+#        cipher: default
+#        project: cn-south-1
