--- a/spring-cloud-huawei-discovery/pom.xml
+++ b/spring-cloud-huawei-discovery/pom.xml
@@ -48,6 +48,10 @@
       <artifactId>spring-cloud-commons</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-loadbalancer</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.apache.servicecomb</groupId>
       <artifactId>service-center-client</artifactId>
     </dependency>
