--- a/spring-cloud-starter-huawei/spring-cloud-starter-huawei-core/pom.xml
+++ b/spring-cloud-starter-huawei/spring-cloud-starter-huawei-core/pom.xml
@@ -35,5 +35,9 @@
       <groupId>com.huaweicloud</groupId>
       <artifactId>spring-cloud-starter-huawei-config</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-bootstrap</artifactId>
+    </dependency>
   </dependencies>
 </project>
