--- a/integration-tests/cse-v1/pom.xml
+++ b/integration-tests/cse-v1/pom.xml
@@ -32,6 +32,7 @@
 
   <modules>
     <module>provider</module>
+    <module>provider-canary</module>
     <module>consumer</module>
     <module>gateway</module>
     <module>tests-client</module>
