--- a/spring-cloud-huawei-dependencies/pom.xml
+++ b/spring-cloud-huawei-dependencies/pom.xml
@@ -22,14 +22,14 @@
   <parent>
     <groupId>com.huaweicloud</groupId>
     <artifactId>spring-cloud-huawei</artifactId>
-    <version>1.7.0-SHAPSHOT</version>
+    <version>1.7.0-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>spring-cloud-huawei-dependencies</artifactId>
   <packaging>pom</packaging>
-  <version>1.7.0-SHAPSHOT</version>
+  <version>1.7.0-SNAPSHOT</version>
   <name>Spring Cloud Huawei Dependencies</name>
   <properties>
     <feign-core.version>11.0</feign-core.version>
