--- a/integration-tests/cse-v1/gateway/src/main/resources/application.yaml
+++ b/integration-tests/cse-v1/gateway/src/main/resources/application.yaml
@@ -22,7 +22,42 @@ server:
 spring:
   cloud:
     gateway:
-      discovery:
-        locator:
-          enabled: true
-          lowerCaseServiceId: true
+      routes:
+        - id: consumer
+          uri: lb://basic-consumer
+          filters:
+            - name: governance
+          predicates:
+            - Path=/**
+servicecomb:
+  matchGroup:
+    demo-rateLimiting: |
+      matches:
+        - apiPath:
+            exact: "/govern/rateLimiting"
+    demo-retry: |
+      matches:
+        - apiPath:
+            prefix: "/govern/retry"
+    demo-circuitBreaker: |
+      matches:
+        - apiPath:
+            exact: "/govern/circuitBreaker"
+    demo-bulkhead: |
+      matches:
+        - apiPath:
+            exact: "/govern/bulkhead"
+  rateLimiting:
+    demo-rateLimiting: |
+      rate: 10
+  retry:
+    demo-retry: |
+      maxAttempts: 3
+  circuitBreaker:
+    demo-circuitBreaker: |
+      minimumNumberOfCalls: 10
+      slidingWindowSize: 10
+      failureRateThreshold: 20
+  bulkhead:
+    demo-bulkhead: |
+      maxConcurrentCalls: 5
