--- a/spring-cloud-starter-huawei/spring-cloud-starter-huawei-service-engine-gateway/pom.xml
+++ b/spring-cloud-starter-huawei/spring-cloud-starter-huawei-service-engine-gateway/pom.xml
@@ -36,7 +36,10 @@
       <groupId>com.huaweicloud</groupId>
       <artifactId>spring-cloud-starter-huawei-governance</artifactId>
     </dependency>
-
+    <dependency>
+      <groupId>com.huaweicloud</groupId>
+      <artifactId>spring-cloud-huawei-router-client</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-gateway</artifactId>
