# add tracing module

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
     <module>spring-cloud-huawei-router-client</module>
     <module>spring-cloud-huawei-swagger</module>
     <module>spring-cloud-huawei-governance</module>
+    <module>spring-cloud-trace</module>
   </modules>
 
   <licenses>
