[#502]fix first time concurrent invoke random fail and add test case for gateway discovery locator

--- a/integration-tests/cse-v2/gateway/src/main/resources/application.yaml
+++ b/integration-tests/cse-v2/gateway/src/main/resources/application.yaml
@@ -26,3 +26,11 @@ spring:
         locator:
           enabled: true
           lowerCaseServiceId: true
+management:
+  endpoint:
+    gateway:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: gateway
