--- a/spring-cloud-huawei-router-client/pom.xml
+++ b/spring-cloud-huawei-router-client/pom.xml
@@ -48,6 +48,8 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
+      <scope>compile</scope>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
