fix integration tests configuration error

--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -33,6 +33,8 @@
     <module>docker-build-config</module>
     <module>docker-run-config</module>
     <module>discovery-tests</module>
+    <module>cse-v1</module>
+    <module>cse-v2</module>
   </modules>
 
   <dependencies>
