# 525 #add CI #update Greenwich code

--- a/integration-tests/cse-v1/consumer/src/main/resources/bootstrap.yml
+++ b/integration-tests/cse-v1/consumer/src/main/resources/bootstrap.yml
@@ -26,13 +26,13 @@ spring:
         enabled: true
         watch: false
         address: https://cse.cn-south-1.myhuaweicloud.com
-        appName: cse-v1-test-application
+        appName: greenwich-v1-test-application
         serviceName: ${spring.application.name}
         version: 0.0.1
         healthCheckInterval: 30
       config:
         serverAddr: https://cse.cn-south-1.myhuaweicloud.com
-        fileSource: consumer.yaml
+        fileSource: greenwich-consumer.yaml
         watch:
           delay: 10000
 
