--- a/integration-tests/cse-v1/consumer/src/main/resources/bootstrap.yml
+++ b/integration-tests/cse-v1/consumer/src/main/resources/bootstrap.yml
@@ -26,7 +26,7 @@ spring:
         enabled: true
         watch: false
         address: https://cse.cn-south-1.myhuaweicloud.com
-        appName: cse-v1-test-application
+        appName: hoxton-v1-test-application
         serviceName: ${spring.application.name}
         version: 0.0.1
         healthCheckInterval: 30
@@ -42,3 +42,4 @@ spring:
         secretKey: ${CREDENTIALS_SK}
         cipher: default
         project: cn-south-1
+
