--- a/integration-tests/cse-v1/consumer/pom.xml
+++ b/integration-tests/cse-v1/consumer/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>com.huaweicloud</groupId>
     <artifactId>cse-v1-test</artifactId>
-    <version>1.7.0-SHAPSHOT</version>
+    <version>1.8.0-SNAPSHOT</version>
   </parent>
 
   <name>Integration Tests::CSE V1::Consumer</name>
