--- a/spring-cloud-starter-huawei/spring-cloud-starter-huawei-service-engine/pom.xml
+++ b/spring-cloud-starter-huawei/spring-cloud-starter-huawei-service-engine/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <artifactId>spring-cloud-starter-huawei</artifactId>
     <groupId>com.huaweicloud</groupId>
-    <version>1.7.0-SHAPSHOT</version>
+    <version>1.8.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
