--- a/spring-boot-huawei-parent/pom.xml
+++ b/spring-boot-huawei-parent/pom.xml
@@ -49,7 +49,7 @@
         <plugin>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-maven-plugin</artifactId>
-          <version>${springboot.version}</version>
+          <version>${spring-boot.version}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
