按照要求修改： 1.将盐值直接配置在配置文件当中

--- a/integration-tests/cse-v2/provider/src/main/resources/bootstrap.yml
+++ b/integration-tests/cse-v2/provider/src/main/resources/bootstrap.yml
@@ -17,7 +17,7 @@
 ## ---------------------------------------------------------------------------
 jasypt:
   encryptor:
-    password: ${SALT}
+    password: GXXX6
 server:
   env: production
 spring:
