统一加密策略，支持任意配置字段指定是否加解密 huaweicloud#536

--- a/spring-cloud-starter-huawei/spring-cloud-starter-huawei-service-engine-gateway/pom.xml
+++ b/spring-cloud-starter-huawei/spring-cloud-starter-huawei-service-engine-gateway/pom.xml
@@ -44,5 +44,9 @@
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-gateway</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.huaweicloud</groupId>
+      <artifactId>spring-cloud-starter-huawei-jasypt</artifactId>
+    </dependency>
   </dependencies>
 </project>
