--- a/spring-cloud-starter-huawei/spring-cloud-starter-huawei-jasypt/pom.xml
+++ b/spring-cloud-starter-huawei/spring-cloud-starter-huawei-jasypt/pom.xml
@@ -15,27 +15,18 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xmlns="http://maven.apache.org/POM/4.0.0"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-
   <parent>
+    <artifactId>spring-cloud-starter-huawei</artifactId>
     <groupId>com.huaweicloud</groupId>
-    <artifactId>cse-v2-test</artifactId>
     <version>1.8.0-SNAPSHOT</version>
   </parent>
+  <modelVersion>4.0.0</modelVersion>
 
-  <name>Integration Tests::CSE V2::Tests Client</name>
-  <artifactId>cse-v2-test-tests-client</artifactId>
-  <packaging>jar</packaging>
-
+  <artifactId>spring-cloud-starter-huawei-jasypt</artifactId>
   <dependencies>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
-      <scope>test</scope>
-    </dependency>
     <dependency>
       <groupId>com.github.ulisesbocchio</groupId>
       <artifactId>jasypt-spring-boot-starter</artifactId>
