--- a/integration-tests/discovery-tests/pom.xml
+++ b/integration-tests/discovery-tests/pom.xml
@@ -28,6 +28,7 @@
   <packaging>pom</packaging>
 
   <modules>
+    <module>common</module>
     <module>price-provider</module>
     <module>order-consumer</module>
     <module>account-provider</module>
