--- a/spring-cloud-huawei-dependencies/pom.xml
+++ b/spring-cloud-huawei-dependencies/pom.xml
@@ -47,6 +47,7 @@
     <swagger-core-v2.version>1.6.2</swagger-core-v2.version>
     <resilience4j.version>1.7.0</resilience4j.version>
     <jasypt.version>2.1.2</jasypt.version>
+    <dubbo.hessian.version>2.7.8</dubbo.hessian.version>
   </properties>
 
   <dependencyManagement>
@@ -173,6 +174,11 @@
         <groupId>com.github.ulisesbocchio</groupId>
         <artifactId>jasypt-spring-boot-starter</artifactId>
         <version>${jasypt.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.dubbo</groupId>
+        <artifactId>dubbo-serialization-hessian2</artifactId>
+        <version>${dubbo.hessian.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
