--- a/spring-cloud-huawei-bom/pom.xml
+++ b/spring-cloud-huawei-bom/pom.xml
@@ -115,6 +115,11 @@
         <artifactId>spring-cloud-starter-huawei-jasypt</artifactId>
         <version>${project.version}</version>
       </dependency>
+      <dependency>
+        <groupId>com.huaweicloud</groupId>
+        <artifactId>spring-cloud-starter-huawei-hessian</artifactId>
+        <version>${project.version}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 </project>
