--- a/integration-tests/cse-v2/pom.xml
+++ b/integration-tests/cse-v2/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <artifactId>integration-tests</artifactId>
     <groupId>com.huaweicloud</groupId>
-    <version>1.8.0-SNAPSHOT</version>
+    <version>1.9.0-2020.0.x-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
