--- a/spring-cloud-huawei-discovery/pom.xml
+++ b/spring-cloud-huawei-discovery/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>com.huaweicloud</groupId>
     <artifactId>spring-cloud-huawei-parents</artifactId>
-    <version>1.8.0-SNAPSHOT</version>
+    <version>1.9.0-2020.0.x-SNAPSHOT</version>
     <relativePath>../spring-cloud-huawei-parents</relativePath>
   </parent>
 
