--- a/spring-cloud-starter-huawei/spring-cloud-starter-huawei-config/pom.xml
+++ b/spring-cloud-starter-huawei/spring-cloud-starter-huawei-config/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>com.huaweicloud</groupId>
     <artifactId>spring-cloud-starter-huawei</artifactId>
-    <version>1.8.0-SNAPSHOT</version>
+    <version>1.9.0-2020.0.x-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
