--- a/spring-cloud-starter-huawei/spring-cloud-starter-huawei-hessian/pom.xml
+++ b/spring-cloud-starter-huawei/spring-cloud-starter-huawei-hessian/pom.xml
@@ -30,6 +30,12 @@
     <dependency>
       <groupId>org.apache.dubbo</groupId>
       <artifactId>dubbo-serialization-hessian2</artifactId>
+      <exclusions>
+        <exclusion>
+          <artifactId>log4j</artifactId>
+          <groupId>log4j</groupId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
